--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "node": ">=8.14.0"
   },
   "scripts": {
-    "test": "standard && nsp check && tap --reporter=spec test/*.js",
+    "test": "standard && tap --reporter=spec test/*.js",
     "coverage": "tap test/*.js --coverage",
     "coveralls": "tap --cov --coverage-report=lcov test/*.js && cat coverage/lcov.info | coveralls",
     "start": "node service.js",
-    "standard-fix": "standard --fix"
+    "standard-fix": "standard --fix",
+    "refresh": "rm -rf node_modules && rm package-lock.json && npm install"
   },
   "repository": {
     "type": "git",
@@ -29,7 +30,6 @@
   },
   "devDependencies": {
     "coveralls": "3.0.2",
-    "nsp": "3.2.1",
     "standard": "12.0.1",
     "tap": "12.1.1"
   },
